--- a/note.html
+++ b/note.html
@@ -33,24 +33,14 @@
          <div class="main">
            <div class="note-area">
              <div class="textinput" contenteditable="true"></div>
-
-          <button class="add"
-            type="button">
-            +
-          </button>
-          <button class="save"
-            type="button">
-            save
-          </button>
-          <button class="delete"
-          type="button">
-          delete
-          </button>
+             <div class="note-buttons"></div>
+          <button id="save-btn">save</button>
+          <button id="delete-btn">delete</button>
          </div>
          </div>
-         
+        </div>
           <footer>
-           <p class="creator">created by mujeeb</p>
+           <p> created by mujeeb </p>
           </footer>
       </div>
 </body>
