--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/styles.css">
     <title>Document</title>
 </head>
@@ -30,7 +30,7 @@
           <p class="message">create a new note</p>
          </div>
           <footer>
-           <p class="creator">created by mujeeb</p>
+           <p>created by mujeeb</p>
           </footer>
       </div>
 </body>
