--- a/note.html
+++ b/note.html
@@ -25,13 +25,14 @@
                 <li>note 3</li>
                </ul>
               </nav>
-      
+        </nav> 
          <div class="main">
            <div class="note-area">
              <div class="textinput" contenteditable="true"></div>
              <div class="note-buttons"></div>
           <button id="save-btn">save</button>
           <button id="delete-btn">delete</button>
+          <button id="add-btn">+</button>
          </div>
          </div>
         </div>
